styles.css
body {
    font-family: Arab, sans-serif;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: flex-start; /* Align title to the left */
    justify-content: flex-start;
    height: 100vh;
    padding: 10px; /* Add padding for consistent left alignment */
}

.header {
    padding:10px;
    text-align: left; /* Aligns the content to the left */
}

.header-img {
    width: 100%; /* Make the image responsive */
    max-width: 500px; /* Set a max width for the image */
    height: auto; /* Maintain aspect ratio */
    margin-bottom: 10px;
}

.header-name {
    font-size: 2.5em; /* Adjust the font size as needed */
    margin: 0; /* Remove default margin from h1 */
    font-weight: 100;
    color: black; /* Set the color to match the unvisited state */
    text-decoration: none;
}

.header-name a {
    text-decoration: none; /* Remove underline */
    color: black; /* Set color for the link */
}

.header-name a:visited {
    color: black; /* Set the color to match the unvisited state */
    text-decoration: none;
}

.link {
    display: flex;
    justify-content: left;
    align-items: left;
    text-align: left;
    padding: 10px;
    text-decoration: underline; /* Underline by default */
    color: rgb(0, 0, 0);
    font-size: 1.5em;
    font-weight: 100;
    transition: text-decoration 0.3s ease;
}

/* Remove underline on hover */
.link:hover {
    text-decoration: none;
}

/* Remove bottom border for the last link */
.link:last-child {
    border-bottom: none;
}

.photo-container {
    max-width: 1000px; /* Set max width for the photo container */
    width: 100%; /* Make the container responsive */
    padding: 10px;
}

.photo {
    width: 100%; /* Make the image responsive */
    max-width: 500px; /* Set a max width for the image */
    height: auto; /* Maintain aspect ratio */
    margin-bottom: 20px;
} 

